--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,13 +4,13 @@
 
     <meta property="og:site_name" content="{{ site.name }}" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}" />
+    <meta property="og:title" content="{% if page.title %}{{ page.title }} :: {% endif %}{{ site.name }}" />
     <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
     <meta property="og:url" content="{{ page.url | absolute_url }}" />
     <meta property="og:image" content="{% if page.cover %}{{ page.cover | absolute_url }}{% else %}{{ "assets/images/cover1.jpg" | absolute_url }}{% endif %}" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}" />
+    <meta name="twitter:title" content="{% if page.title %}{{ page.title }} :: {% endif %}{{ site.name }}" />
     <meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
     <meta name="twitter:url" content="{{ page.url | absolute_url }}" />
     <meta name="twitter:image:src" content="{% if page.cover %}{{ page.cover | absolute_url }}{% else %}{{ "assets/images/cover1.jpg" | absolute_url }}{% endif %}" />
@@ -20,7 +20,7 @@
     "@context": "http://schema.org",
     "@type": "Website",
     "publisher": "{{ site.name }}",
-    "name": "{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}",
+    "name": "{% if page.title %}{{ page.title }} :: {% endif %}{{ site.name }}",
     "url": "{{ page.url | absolute_url }}",
     "image": "{% if page.cover %}{{ page.cover | absolute_url }}{% else %}{{ "assets/images/cover1.jpg" | absolute_url }}{% endif %}",
     "description": "{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}"
