--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,13 +7,13 @@
     <meta property="og:title" content="{% if page.title %}{{ page.title }} :: {% endif %}{{ site.name }}" />
     <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
     <meta property="og:url" content="{{ page.url | absolute_url }}" />
-    <meta property="og:image" content="{% if page.cover %}{{ page.cover | absolute_url }}{% else %}{{ "assets/images/cover1.jpg" | absolute_url }}{% endif %}" />
+    <meta property="og:image" content="{% if page.cover %}{{ page.cover | absolute_url }}{% elsif site.social_thumbnail %}{{ site.social_thumbnail | absolute_url }}{% else %}{{ "assets/images/cover1.jpg" | absolute_url }}{% endif %}" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="{% if page.title %}{{ page.title }} :: {% endif %}{{ site.name }}" />
     <meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
     <meta name="twitter:url" content="{{ page.url | absolute_url }}" />
-    <meta name="twitter:image:src" content="{% if page.cover %}{{ page.cover | absolute_url }}{% else %}{{ "assets/images/cover1.jpg" | absolute_url }}{% endif %}" />
+    <meta name="twitter:image:src" content="{% if page.cover %}{{ page.cover | absolute_url }}{% elsif site.social_thumbnail %}{{ site.social_thumbnail | absolute_url }}{% else %}{{ "assets/images/cover1.jpg" | absolute_url }}{% endif %}" />
 
     <script type="application/ld+json">
 {
@@ -22,7 +22,7 @@
     "publisher": "{{ site.name }}",
     "name": "{% if page.title %}{{ page.title }} :: {% endif %}{{ site.name }}",
     "url": "{{ page.url | absolute_url }}",
-    "image": "{% if page.cover %}{{ page.cover | absolute_url }}{% else %}{{ "assets/images/cover1.jpg" | absolute_url }}{% endif %}",
+    "image": "{% if page.cover %}{{ page.cover | absolute_url }}{% elsif site.social_thumbnail %}{{ site.social_thumbnail | absolute_url }}{% else %}{{ "assets/images/cover1.jpg" | absolute_url }}{% endif %}",
     "description": "{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}"
 }
     </script>
